Simplified th base class using buffer libraries making it less bug sensitive. Also removed the usb implementation as it is planned to be used in embeded systems.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "CircularBuffer"]
 	path = CircularBuffer
-	url = jimmy@berg-electrotechnology.nl:/mnt/HDD0/git/jimmy-repo/CircularBuffer.git
+	url = https://github.com/overlord1123/CircularBuffer.git
 [submodule "LinearBuffer"]
 	path = LinearBuffer
-	url = jimmy@berg-electrotechnology.nl:/mnt/HDD0/git/jimmy-repo/LinearBuffer.git
+	url = https://github.com/overlord1123/LinearBuffer.git
